--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,12 +1,14 @@
 .navbar {
   display: flex;
-  background-color: #283593;
+  background-color: #2c3e50;
 }
 
 .logo {
   flex: 1;
   color: #90CAF9;
   margin-left: 10px;
+  font-family: arial;
+  font-size: 40px;
 }
 
 .navbarlist {
@@ -14,9 +16,13 @@
   list-style-type: none;
   flex-grow: 9;
   justify-content: flex-end;
+
 }
 
 .navbarlist__item {
-  width: 90px;
+  margin-right: 10px;
   color: #90CAF9;
+  font-family: arial;
+  height: 20px;
+  align-self: center;
 }
